add some api, data & tests; wip
